force-app/main/default/objects/Lead/fields/Assign_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to Partner</label>
    <type>Checkbox</type>
</CustomField>