force-app/main/default/objects/Lead/fields/Days_to_Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Lead_Conversion__c</fullName>
    <formula>ConvertedDate -  DATEVALUE(CreatedDate)</formula>
    <label>Days to Lead Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>