force-app/main/default/objects/Lead/fields/Lead_Mining_Tool__c.field-meta.xml
<CustomField>
    <fullName>Lead_Mining_Tool__c</fullName>
    <inlineHelpText>Please select which Mining Tool was used to gather this Lead</inlineHelpText>
    <label>Lead Mining Tool</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D.B. Hoovers</fullName>
            </value>
            <value>
                <fullName>FedBizOpps</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PecWeb (IIR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>