force-app/main/default/objects/Lead/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>Submarket__c</fullName>
    <label>Submarket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Submarket</valueSetName>
    </valueSet>
</CustomField>