force-app/main/default/objects/Lead/recordTypes/Community_Leads.recordType-meta.xml
<RecordType>
    <fullName>Community_Leads</fullName>
    <active>true</active>
    <businessProcess>CDC Lead Process</businessProcess>
    <description>This Record type is available for Partner  Community users to create New Leads</description>
    <label>Community Leads</label>
</RecordType>