force-app/main/default/objects/Lead/validationRules/Rep_Code_Assign_to_Partner_Dependency.validationRule-meta.xml
<ValidationRule>
    <fullName>Rep_Code_Assign_to_Partner_Dependency</fullName>
    <active>true</active>
    <errorConditionFormula>Assign_to_Partner__c &amp;&amp;  ISBLANK( PartnerAccount.Id )</errorConditionFormula>
    <errorDisplayField>PartnerAccountId</errorDisplayField>
    <errorMessage>Please choose Sales Rep (Rep Code) Account to assign it to partner</errorMessage>
</ValidationRule>