force-app/main/default/objects/Lead/listViews/New_Leads_1_Days_Old_Created_This_Mo.listView-meta.xml
<ListView>
    <fullName>New_Leads_1_Days_Old_Created_This_Mo</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Assign_to_Partner__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>pi__utm_campaign__c</columns>
    <columns>pi__campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>New Leads - 1+ Days Old, Created This Mo</label>
</ListView>