force-app/main/default/objects/Lead/listViews/test_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>test_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>test Queue</label>
    <queue>test_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>